# LLMHub

./: .biomeignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  biome.jsonc  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  pyproject.toml  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  main.py  router.py
backend/: .env.example  .flake8  .gitignore  AGENTS.md  README.md  pyproject.toml
changelog/: api-optimization.md
components/: app-sidebar.tsx  artifact.tsx  brand-mark.tsx  chat-bar.tsx  chat.tsx  code-block.tsx  console.tsx  create-artifact.tsx  deployment-logs-panel.tsx  document-preview.tsx  markdown.tsx  message-actions.tsx  message-editor.tsx  message-reasoning.tsx  message.tsx  messages.tsx  model-selector.tsx  multimodal-input.tsx  navbar.tsx  overview.tsx  providers.tsx  public-api-dialog.tsx  request-model-dialog.tsx  sheet-editor.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  suggested-actions.tsx  theme-toggle.tsx  toolbar.tsx  use-scroll-to-bottom.ts  user-initials-avatar.tsx
config/: environment.yaml  models.yaml  models.yaml.template
docs/: 01-quick-start.md  concurrency-kv-findings.md
frontend/: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vitest.config.ts
hooks/: use-api-key.ts  use-artifact.ts  use-auth.ts  use-chat-visibility.ts  use-chat.ts  use-debounced-callback.ts  use-model-selector.ts  use-models.ts  (+4 more)
(+381 files in other folders)
